Layout fix: Removed whitespace before footer

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ main {
 	left: 0;
 	overflow: hidden;
 	z-index: 2;
-	padding-bottom: 23px;
+	padding-bottom: 12px;
 }
 
 footer {
